# Framework3D

./: .gitignore  .gitmodules
Framework3D/: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.py
Framework3D/cmake/: AddLibrary.cmake  AddNodes.cmake  FindSlang.cmake  GenNodesJson.cmake
Framework3D/include/GUI/: node_system.h
Framework3D/include/GUI/window/: window.h
Framework3D/include/GUI_old/: ui_event.h
Framework3D/include/Nodes/: all_socket_types.hpp  socket_type_aliases.hpp
Framework3D/include/Nodes/socket_types/: basic_socket_types.hpp
Framework3D/include/Utils/: json.hpp
Framework3D/include/Utils/CUDA/: CUDAException.h
Framework3D/include/Utils/Functions/: CPPType.hpp
Framework3D/include/Utils/Launcher/: RunUsdview.h
Framework3D/include/api/: USTC_CG.h
Framework3D/python/: test.ipynb
Framework3D/python/lens/: double_gauss.json  intersect_sphere.slang  lens_module.py
Framework3D/source/Core/RHI/: nvrtc.cmake
Framework3D/source/Editor/: CMakeLists.txt
Framework3D/source/Editor/GUI/: CMakeLists.txt
Framework3D/source/Editor/geometry/: Component.cpp  CurveComponent.cpp  GOP.cpp  MeshOperand.cpp  PointsComponent.cpp  global_stage.hpp
Framework3D/source/Editor/geometry_nodes/: CMakeLists.txt  geom_node_base.h  node_boundary_mapping.cpp  node_merge_geometry.cpp  node_min_surf.cpp  node_mvc.cpp  node_points_to_mesh.cpp  node_write_usd.cpp
Framework3D/source/Editor/simulation_nodes/: CMakeLists.txt  simulation_zone.cpp
Framework3D/source/GUI/: CMakeLists.txt  free_camera.h  node_system_ui.cpp
Framework3D/source/GUI/source/: imgui_nvrhi.cpp  imgui_nvrhi.h  imgui_renderer.cpp  widget.cpp  window.cpp
Framework3D/source/GUI/tests/: GUI.cpp
Framework3D/source/GUI/window/: window.cpp
Framework3D/source/GUI_old/: node_system_exec.h
Framework3D/source/Logger/: CMakeLists.txt
Framework3D/source/Logger/source/: Logging.cpp
Framework3D/source/Nodes/core/: CMakeLists.txt  CPPType.cpp
Framework3D/source/Plugins/: CMakeLists.txt
Framework3D/source/Plugins/diff_optics/: CMakeLists.txt
Framework3D/source/Plugins/glintify/: CMakeLists.txt
Framework3D/source/Plugins/util_scripts/: api_header.py  convert.py  node_adaptor.py  nodes_json.py
Framework3D/source/RCore/hd_USTC_CG_GL/: CMakeLists.txt  renderer.h  sampler.h
Framework3D/source/RHI/: CMakeLists.txt  nvrtc.cmake
Framework3D/source/RHI/source/: DeviceManager.cpp  DeviceManager_DX12.cpp  DeviceManager_VK.cpp  cuda_extension.cpp  cuda_extension.cu  rhi.cpp  shader.cpp  shaderCompiler.cpp  shaderCompiler.h  shader_reflection.cpp
Framework3D/source/RHI/tests/: cpu_slang.cpp  cuda_extension.cpp  rhi.cpp
Framework3D/source/Runtime/: CMakeLists.txt
Framework3D/source/Runtime/renderer/: CMakeLists.txt
Framework3D/source/Runtime/usdview_widget/: CMakeLists.txt
Framework3D/source/basic_nodes/: CMakeLists.txt  basic_node_base.h  node_func_buffer_compose.cpp  node_func_buffer_decompose.cpp  node_func_create_buffer.cpp  node_iteration.cpp  node_storage.cpp  node_value.cpp
Framework3D/source/basic_nodes/conversion/: node_conversion.cpp
Framework3D/source/convert_nodes/: CMakeLists.txt  node_float_3dto2d.cpp  node_vector_to_usd.cpp
Framework3D/source/deprecated/GUI_old/: node_system_exec.h  node_system_ui.cpp
Framework3D/source/diff_optics/: CMakeLists.txt
Framework3D/source/diff_optics/python/: dO.cpp  (+1 more)
Framework3D/source/geometry/: CMakeLists.txt  Components.h  GOP.cpp  MeshOperand.cpp  VolumeComponent.cpp
Framework3D/source/geometry_nodes/: CMakeLists.txt  geom_node_base.h  input.cpp  mvc.cpp  newton.cpp  node_animate_mesh.cpp  node_arap.cpp  node_arap_energy.cpp  node_bbw.cpp  node_bouncing_balls.cpp  node_boundary_mapping.cpp  node_create_geom.cpp  node_curvature.cpp  node_curve_to_mesh.cpp  node_dirichlet_energy.cpp  node_ebp.cpp  node_extract_singlar_values.cpp  node_geom_add_point.cpp  node_hbc.cpp  node_lscm.cpp  node_mass_spring.cpp  node_mesh_compose.cpp  node_mesh_decompose.cpp  node_meshmesh_dist.cpp  node_min_surf.cpp  node_mvc.cpp  node_points_to_mesh.cpp  node_print_debug_info.cpp  node_random_uv_points.cpp  node_read_obj.cpp  node_read_usd.cpp  node_set_texture.cpp  node_set_vert_color.cpp  node_sph_fluid.cpp  node_time_code.cpp  node_transform_geom.cpp  node_triangulate.cpp  node_tutte.cpp  node_write_usd.cpp
Framework3D/source/image_warping_nodes/: CMakeLists.txt  node_get_click_pos.cpp  node_set_image.cpp
Framework3D/source/logger/: CMakeLists.txt
Framework3D/source/nodes/: CMakeLists.txt  NODES_FILES_DIR.h.in
Framework3D/source/optimization/: L_BFGS.cpp  function_add.cpp  function_add_forward.cpp  function_composition_forward.cpp  function_multiply.cpp  function_multiply_forward.cpp  grad.cpp  gradient_forward.cpp  hessian.cpp  hessian_backward.cpp  hessian_forward.cpp  l_bfgs_forward.cpp  newton.cpp  test_function.cpp  test_function_1.cpp  test_function_3.cpp  test_function_4.cpp  test_function_5.cpp  test_function_6.cpp
Framework3D/source/polyscope_nodes/: CMakeLists.txt  node_create_point_cloud.cpp  node_get_picked_face.cpp  node_get_picked_vertex.cpp  node_get_polyscope_transform.cpp  node_test_mesh_add_quantity.cpp  node_transform_compose.cpp  node_transform_decompose.cpp  node_visualize_2d_function.cpp  node_write_polyscope.cpp
Framework3D/source/polyscope_widget/: CMakeLists.txt
Framework3D/source/renderer/: CMakeLists.txt
Framework3D/source/stage/: CMakeLists.txt
Framework3D/source/usdview_widget/: CMakeLists.txt
Framework3D/source/util_scripts/: node_adaptor.py  nodes_json.py
Framework3D/tests/: CMakeLists.txt
Framework3D/tests/GUI/: CMakeLists.txt  GUI.cpp
Framework3D/tests/GUI_old/: entt.cpp
Framework3D/tests/Node/: CMakeLists.txt  socket_any.cpp
Framework3D/tests/RHI/: CMakeLists.txt  rhi.cpp
Framework3D/tests/application/: CMakeLists.txt  USTC_CG.cpp  USTC_CG_polysocpe.cpp  geom_payload.hpp  geom_system.hpp  image_warping.cpp
Framework3D/tests/geometry/: CMakeLists.txt  geometry_processing.cpp
Framework3D/tests/nodes/: CMakeLists.txt
Framework3D/tests/stage/: CMakeLists.txt  stage.cpp
(+949 files in other folders)
